# ai-storyteller

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/music_generation/lrc/: the_wolf_and_the_seven_kids.lrc
data/music_generation/music/: README.md
notebooks/: settings.ipynb
notebooks/image_generation/: image_generation.ipynb
notebooks/music_generation/: diffrhythm.ipynb
scripts/: infer_prompt_ref.sh
scripts/music_generation/: run_diffrhythm.sh
src/ai_storyteller/: __init__.py
src/ai_storyteller/config/: settings.py
src/ai_storyteller/interfaces/: music_generation_interface.py  text_generation_interface.py
src/ai_storyteller/music_generation/: diffrhythm.py
src/ai_storyteller/utils/: env_utils.py  text_utils.py
