[project]
name = "ai-storyteller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dachenlian", email = "cclemon.lian@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.12.1",
    "gradio>=5.27.0",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.0.5",
    "openai>=1.76.0",
    "opencc==1.1.6",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "torch==2.6",
    "transformers>=4.51.3",
    "typer>=0.15.2",
]

[project.optional-dependencies]
diffrhythm = [
    "accelerate==1.4.0",
    "bitsandbytes",
    "cn2an==0.5.23",
    "ema-pytorch==0.7.7",
    "inflect==7.5.0",
    "jieba==0.42.1",
    "librosa==0.10.2.post1",
    "muq==0.1.0",
    "mutagen==1.47.0",
    "onnxruntime",
    "pandas==2.2.3",
    "phonemizer==3.3.0",
    "prefigure==0.0.10",
    "py3langid",
    "pyarrow==19.0.1",
    "pykakasi==2.3.0",
    "pylance==0.23.2",
    "pypinyin==0.53.0",
    "torchaudio==2.6.0",
    "torchdiffeq==0.2.5",
    "transformers>=4.51.3",
    "unidecode==1.3.8",
    "x-transformers==2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
